Fix Add List Layout issue

--- a/sass/web.scss
+++ b/sass/web.scss
@@ -21,7 +21,7 @@ body {
 		display: block;
 	}
 
-	#prefsDialog .nav, #sidebar, #tasks, .vsplitbar, #login {
+	#prefsDialog .nav, #content {
 		display: none;
 	}
 
